# xfce4-sysinfo-plugin

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  README.md  TODO  bootstrap.sh  configure.ac
include/: Makefile.am
include/xfce4-sysinfo-plugin/: Makefile.am  plugins.h  xfce4_sysinfo_plugin.h
plugins/: Makefile.am
plugins/cpu/: Makefile.am  sysinfo_cpu.c
plugins/mem/: Makefile.am  sysinfo_mem.c
plugins/net/: Makefile.am  sysinfo_net.c
src/: Makefile.am  dir.c  dir.h  libsysinfo.c  plugins.c  plugins.h  sysinfo.c  sysinfo.desktop  tester.c  xfce4_sysinfo_plugin.c  xfce4_sysinfo_plugin.cpp  xfce4_sysinfo_plugin.h
