#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([xfce4-sysinfo-plugin], [0.1], [jarro.2783@gmail.com])
AC_CONFIG_SRCDIR([src/xfce4_sysinfo_plugin.cpp])

# Checks for programs.
AC_PROG_CXX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile,
                 src/Makefile
                ])
AC_OUTPUT
