plugindir = $(libexecdir)/xfce4/panel-plugins

plugin_PROGRAMS = xfce4-sysinfo-plugin

#xfce4_sysinfo_plugin_CPPFLAGS = $(LIBXFCE4PANEL_CFLAGS) -fpermissive
xfce4_sysinfo_plugin_CFLAGS = $(LIBXFCE4PANEL_CFLAGS)

xfce4_sysinfo_plugin_LDADD = $(LIBXFCE4PANEL_LIBS)

xfce4_sysinfo_plugin_SOURCES = xfce4_sysinfo_plugin.c
